still fixing contrast

--- a/css/style.css
+++ b/css/style.css
@@ -396,6 +396,6 @@ input[type=submit] {
   }
 
   .current{
-    background-color: #2c8de0;
+    background-color: #2475ba;
   }
 }
